// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSuperUpdateButton is rendered 1`] = `
<OuiToolTip
  delay="regular"
  position="bottom"
>
  <OuiButton
    className="ouiSuperUpdateButton"
    color="primary"
    iconType="refresh"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "ouiSuperUpdateButton__text",
      }
    }
  >
    <OuiI18n
      default="Refresh"
      token="ouiSuperUpdateButton.refreshButtonLabel"
    />
  </OuiButton>
</OuiToolTip>
`;

exports[`OuiSuperUpdateButton isDisabled 1`] = `
<OuiToolTip
  content={
    <OuiI18n
      default="Cannot update"
      token="ouiSuperUpdateButton.cannotUpdateTooltip"
    />
  }
  delay="regular"
  position="bottom"
>
  <OuiButton
    className="ouiSuperUpdateButton"
    color="primary"
    iconType="refresh"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "ouiSuperUpdateButton__text",
      }
    }
  >
    <OuiI18n
      default="Refresh"
      token="ouiSuperUpdateButton.refreshButtonLabel"
    />
  </OuiButton>
</OuiToolTip>
`;

exports[`OuiSuperUpdateButton isLoading 1`] = `
<OuiToolTip
  delay="regular"
  position="bottom"
>
  <OuiButton
    className="ouiSuperUpdateButton"
    color="success"
    iconType="refresh"
    isDisabled={false}
    isLoading={true}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "ouiSuperUpdateButton__text",
      }
    }
  >
    <OuiI18n
      default="Updating"
      token="ouiSuperUpdateButton.updatingButtonLabel"
    />
  </OuiButton>
</OuiToolTip>
`;

exports[`OuiSuperUpdateButton needsUpdate 1`] = `
<OuiToolTip
  content={
    <OuiI18n
      default="Click to apply"
      token="ouiSuperUpdateButton.clickToApplyTooltip"
    />
  }
  delay="regular"
  position="bottom"
>
  <OuiButton
    className="ouiSuperUpdateButton"
    color="success"
    iconType="refresh"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "ouiSuperUpdateButton__text",
      }
    }
  >
    <OuiI18n
      default="Update"
      token="ouiSuperUpdateButton.updateButtonLabel"
    />
  </OuiButton>
</OuiToolTip>
`;

exports[`OuiSuperUpdateButton showTooltip 1`] = `
<OuiToolTip
  delay="regular"
  position="bottom"
>
  <OuiButton
    className="ouiSuperUpdateButton"
    color="primary"
    iconType="refresh"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "ouiSuperUpdateButton__text",
      }
    }
  >
    <OuiI18n
      default="Refresh"
      token="ouiSuperUpdateButton.refreshButtonLabel"
    />
  </OuiButton>
</OuiToolTip>
`;
